# AasthaSathi

./: .env.template  .gitignore  API_DEVELOPMENT_PLAN.md  API_PHASE1_COMPLETE.md  FALLBACK_IMPLEMENTATION.md  PHASE2_COMPLETE.md  PHASE4_SUMMARY.md  QUICK_FIX.md  README.md  SUCCESS_REPORT.md  TEST_RESULTS.md  apidoc.md  main.py  pyproject.toml  requirements.txt  start_api.sh
aasthasathi/: __init__.py
aasthasathi/agent/: __init__.py  agent.py  prompting.py
aasthasathi/agents/: __init__.py
aasthasathi/api/: __init__.py  banking_client.py
aasthasathi/core/: __init__.py  config.py  logging_config.py  models.py  security.py
aasthasathi/frontend/: __init__.py
aasthasathi/ingestion/: pdf_processor.py  pipeline.py  vector_database.py  website_scraper.py
aasthasathi/llm/: __init__.py  embeddings.py
agents/: __init__.py  api_agent.py  integrated_agent.py  integration_nodes.py  models.py  nodes.py  prompts.py  rag_agent.py  retriever.py  router.py  streaming.py  utils.py
agents/tools/: __init__.py  api_client.py  (+1 more)
api/: README.md  main.py
core/: config.py
docs/: LCEL_BENEFITS.md  LCEL_REFACTORING.md
ingestion/: __init__.py  data_ingestion_pipeline.py  embedding_generator.py  user_manual_processor.py  vector_store.py  web_scraper.py
scripts/: atomic_reindex.py  check_vector_db.py  fix_chunk_metadata.py  quick_test.py  run_agent_demo.py  test_api_agent.py  test_api_endpoint.py  test_api_tools.py  test_fallback.py  test_integrated_workflow.py  test_new_api_tools.py  test_router.py  test_single_query.py
tests/: test_rag_agent.py  test_router_unit.py
(+9 files in other folders)
